--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,10 +3,19 @@ font-family: 'Poppins', sans-serif*/
 
 h1 {
   font-family: "Playfair Display", serif;
+  font-size: 76px;
+}
+
+h3 {
+  font-family: "Playfair Display", serif;
+  font-size: 24px;
+  margin-top: 18px;
 }
 
 p {
   font-family: "Poppins", sans-serif;
+  font-size: 34px;
+  margin-bottom: 0px;
 }
 
 .header-intro {
