--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,3 +29,10 @@ p {
 nav {
   font-family: "Poppins", sans-serif;
 }
+
+.btn-branding {
+  background: white;
+  border-radius: 4px;
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+}
