--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -53,3 +53,23 @@ nav {
   line-height: 34px;
   padding: 12px 20px;
 }
+
+img {
+  border-radius: 4px 0 0 4px;
+}
+
+.project-showcase {
+  font-family: var(--heading-font-family);
+  font-size: 24px;
+  margin-top: 18px;
+}
+
+.project-img {
+  background: #f0e7df;
+  padding: 14px;
+  border-radius: 4px;
+}
+
+.showcase-title {
+  font-family: var(--heading-font-family);
+}
