--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -47,7 +47,7 @@ nav {
 
 .btn-branding {
   background: white;
-  border-radius: 4px;
+  border-radius: 6px;
   font-size: 18px;
   font-family: var(--default-font-family);
   line-height: 34px;
@@ -81,16 +81,20 @@ i {
 
 .contact-section {
   background: var(--gradient-color);
-  padding-bottom: 200px;
-  padding-top: 20px;
-  border-radius: 0px 0px 20px 20px;
-}
+  padding-bottom: 100px;
 
-.contact-btn:hover {
-  text-decoration: none;
+  border-radius: 0px 0px 40px 40px;
 }
 
 a .contact-btn {
-  color: black;
-  border: 10px;
+  background: white;
+  border-radius: 6px;
+  font-size: 18px;
+  font-family: var(--default-font-family);
+  line-height: 34px;
+  padding: 12px 20px;
+}
+
+.html {
+  color: #ed5e29;
 }
