Added color to icons

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -98,3 +98,43 @@ a .contact-btn {
 .html {
   color: #ed5e29;
 }
+
+.css {
+  color: #2367b2;
+}
+
+.js {
+  color: #f1bf22;
+}
+
+.code {
+  color: #0279cb;
+}
+
+.api {
+  color: #03bff4;
+}
+
+.bootstrap {
+  color: #7311f5;
+}
+
+.hosting {
+  color: #38aebb;
+}
+
+.flexbox {
+  color: #0765fa;
+}
+
+.react {
+  color: #03d9fe;
+}
+
+.github {
+  color: #963ea6;
+}
+
+.seo {
+  color: #34a953;
+}
