--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,8 +81,8 @@ i {
 
 .contact-section {
   background: var(--gradient-color);
-  padding-bottom: 100px;
-  padding-top: 20px;
+  padding-bottom: 40px;
+  padding-top: 28px;
   border-radius: 0px 0px 40px 40px;
 }
 
@@ -145,4 +145,14 @@ a .contact-btn {
 
 .contact-icons:hover {
   color: black;
+}
+
+.taylors-email {
+  font-family: var(--default-font-family);
+
+  font-size: 20px;
+}
+
+.contact-header {
+  font-size: 48px;
 }
