--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -214,6 +214,9 @@ a .contact-btn {
     padding: 48px;
     padding-bottom: 10px;
   }
+  .cert-img {
+    margin-bottom: ;
+  }
 }
 
 .btn-project {
@@ -241,4 +244,9 @@ a .contact-btn {
 
 .about-section {
   background: var(--gradient-color);
+}
+
+.cert-img {
+  border: 4px solid #e3d3c5;
+  border-radius: 4px;
 }
