--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -214,8 +214,34 @@ a .contact-btn {
     padding: 48px;
     padding-bottom: 10px;
   }
-  .cert-img {
-    margin-bottom: ;
+
+  .about-h1 {
+    font-size: 28px;
+    text-align: center;
+  }
+
+  .about-h3 {
+    font-size: 24px;
+    text-align: center;
+    line-height: 1.3;
+    margin-top: 10px;
+  }
+
+  .about-p {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 32px;
+  }
+
+  .about-list {
+    display: none;
+  }
+
+  .about-p2 {
+    display: none;
+  }
+  .about-p3 {
+    display: none;
   }
 }
 
