--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -74,7 +74,7 @@ nav {
 }
 
 .img-display {
-  background: #7f7f7f;
+  background: #ede3d9;
 }
 
 i {
@@ -246,7 +246,7 @@ a .contact-btn {
 }
 
 .btn-project {
-  background: var(--gradient-color);
+  background: #ede3d9;
   border-radius: 6px;
   font-size: 14px;
   font-family: var(--default-font-family);
