Updated column info format to include buttons at the bottom

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -246,7 +246,7 @@ a .contact-btn {
 }
 
 .btn-project {
-  background: black;
+  background: #ede2d9;
   border-radius: 6px;
   font-size: 16px;
   font-family: var(--default-font-family);
