--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -60,10 +60,6 @@ nav {
   color: white;
 }
 
-.header-image {
-  border-radius: 4px 0 0 4px;
-}
-
 .project-showcase {
   font-family: var(--heading-font-family);
   font-size: 24px;
@@ -74,7 +70,7 @@ nav {
 .showcase-title {
   font-family: var(--heading-font-family);
   padding-top: 60px;
-  color: var(--secondary-color);
+
   font-size: 48px;
 }
 
@@ -145,7 +141,8 @@ i {
 }
 
 .contact-icons:hover {
-  color: black;
+  color: var(--secondary-color);
+  opacity: 0.6;
 }
 
 .taylors-email {
@@ -163,7 +160,8 @@ i {
 }
 
 .footer-arrow:hover {
-  color: black;
+  color: var(--secondary-color);
+  opacity: 0.6;
 }
 
 .arrow-link {
@@ -252,7 +250,7 @@ i {
 }
 
 .btn-project:hover {
-  background: var(--primary-color);
+  background: #79cbd6;
   transition: 100ms ease-in-out;
 }
 
@@ -294,7 +292,7 @@ ul {
 
 .mots-link:hover {
   text-decoration: none;
-
+  color: var(--secondary-color);
   opacity: 0.7;
 }
 
@@ -307,8 +305,7 @@ mots-link:visited {
 }
 
 .email-taylor:hover {
-  color: black;
-
+  color: #79cbd6;
   text-decoration: none;
 }
 
