Updated logo hover color to secondary color

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -279,6 +279,9 @@ i {
   color: Var(--secondary-color);
   font-size: 36px;
 }
+.logo:hover {
+  color: var(--secondary-color);
+}
 
 .nav-link {
   color: black;
